--- a/style.css
+++ b/style.css
@@ -10,10 +10,12 @@
 body,
 html {
     height: 100%;
+    background-color: #fff;
 }
 
 .nav {
     text-align: center;
+    background-color: #33A6B8;
 }
 
 
