--- a/style.css
+++ b/style.css
@@ -10,22 +10,16 @@
 body,
 html {
     height: 100%;
-    background-image:
-
+    background-image: url(imgs/banner1.jpg);
+    background-repeat: no-repeat;
+    width: 100vw;
+    background-size: cover;
 }
 
 .banner {
     text-align: center;
-    
 }
 
-.nav{
-    background-image: url(banner1.jpg);
-    background-repeat: no-repeat;
-    width: 100vw;
-    background-size: cover;
-
-}
 
 /* 導覽列 */
 
@@ -37,8 +31,6 @@ html {
 .navbar .box {
     margin: auto;
 }
-
-
 
 .n-box1 {
     height: 200px;
@@ -69,12 +61,30 @@ html {
     display: inline-block;
     width: 300px;
 }
-.logo img{
+
+.logo img {
     width: 100%;
 }
 
-.image img{
+.image img {
     width: 100vw;
     /* height:  */
     background-size: cover;
+}
+
+
+/* 頁尾 */
+
+footer {
+    background-color: #466d47;
+    color: white;
+    /* 定位：固定 psf */
+    position: fixed;
+    /* 底部距離0 */
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    text-align: center;
+    /* 行高與高度相同：垂直置中，僅限一行內容 */
+    line-height: 60px;
 }
